--- a/style.css
+++ b/style.css
@@ -57,10 +57,18 @@
 .sectionone>p{
     margin-top: 50px;
     font-size: 18px;
+    font-style: inherit;
+    line-height: 30px;
+    width: 400px;
 }
 .secbutton1{
     position: relative;
-    top: 500px; left: -560px;
+    top: 400px; left: -500px;
     padding: 16px 35px;
     border-radius: .6em;
+}
+.sectiontwo{
+    display: inline;
+    position: relative;
+    top: 50px; left: -600px;
 }
