--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@
 
 /* end of the Navbar  */
 
+/*SectionOne starts  */
+
 .sectionone{
     float: left;
     height: 450px;
@@ -67,8 +69,24 @@
     padding: 16px 35px;
     border-radius: .6em;
 }
+/* section two starts  */
+
 .sectiontwo{
-    display: inline;
-    position: relative;
-    top: 50px; left: -600px;
+    margin-top: 50px;
 }
+.sectiontwo>img{
+    margin-left: -600px;
+    display: inline;
+}
+/* .sectiontwo>h2{
+    float: right;
+    font-size: 35px;
+    margin-right: 190px;
+    margin-top: 30px;
+    font-weight: 800;
+} */
+.sectiontwo>h2,p {
+    float: right;
+}
+/* here starts section three  */
+
